--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
     "bootstrap": "^4.5.0",
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
